# painless-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: CelestialBodies.h  Editor.h  Game.h
resources/: .gitignore  internalConfig.ini
src/: CelestialBodies.cpp  Game.cpp  main.cpp
